<resources>
    <string name="app_name">JDJ Health</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to JDJ Health</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvhome">Welcome</string>
    <string name="strBtnSubmit">Submit</string>
    <string name="strCreate_account">Create Account</string>
    <string name="strFitbit_login">FitBit Login</string>
    <string name="strFitbit_password">Fitbit Password</string>
    <string name="strFitbit_username">FitBit Username</string>
    <string name="strEmail">Email</string>
    <string name="strAccountName">Name</string>
    <string name="strAccountPassword">Password</string>
    <string name="strAccountUsername">Username</string>
</resources>